fix(config): update scope

--- a/blogify-ai.ini
+++ b/blogify-ai.ini
@@ -5,4 +5,4 @@ SERVER_BASEURL = http://localhost:7777/
 [OAUTH2]
 CLIENT_ID = 664ea42ceb50b22471db645f
 CLIENT_SECRET = 5bd19648-cf20-43dd-8f53-9ca22f90dde1
-SCOPE = PublishBlog ReadSettings ReadProfile ReadAffliate ReadAnalytics ReadBlog
+SCOPE = SubscribeBlog ReadSettings ReadProfile ReadAffliate ReadAnalytics ReadBlog
