perf(config): parse config into global constant

--- a/blogify-ai.ini
+++ b/blogify-ai.ini
@@ -1,6 +1,6 @@
 [BLOGIFY]
-CLIENT_BASEURL = https://localhost:7000/
-SERVER_BASEURL = http://localhost:7777/
+CLIENT = https://blogify.ai/
+SERVER = https://api.blogify.ai/
 
 [OAUTH2]
 CLIENT_ID = 664ea42ceb50b22471db645f
